<resources>
    <string name="app_name">USTH Moodle</string>
    <!-- Strings related to activity_login -->
    <string name="prompt_email">Email or username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="forget_password">Forgot your password?</string>

    <!-- Strings related to activity_home -->
    <string name="course_categories">Course Categories</string>
    <string name="course_my_courses">My Courses</string>
    <string name="course_site_news">Site News</string>
    <string name="course_lecturer_guide">Moodle Lecturer Guide</string>
    <string name="course_student_guide">Moodle Student Guide</string>
    <string name="course_assistant_guide">Moodle Assistant Guide</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
